--- a/index.html
+++ b/index.html
@@ -1,6 +1,47 @@
-<! DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Nailah Gordon – MEDPL 150</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-  This is my first web page 
+
+<header>
+    <h1>Nailah Gordon</h1>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="week1.html">Plato Reflection</a>
+        <a href="image1.html">Image 1</a>
+        <a href="image2.html">Image 2</a>
+        <a href="depth.html">Depth of Field & Camera Raw</a>
+        <a href="blur.html">Blur Gallery</a> 
+        <a href="cameraraw.html">Camera Raw</a>
+        <a href="reading2.html">Reading #2</a>
+    </nav>
+</header>
+
+<main>
+    <img src="/medpl150-class-website/headshot.jpg" alt="A picture of me" width="300">
+
+    <h2>Creative Statement</h2>
+    <p>
+I’m interested in how media and design can influence the way people think and feel. 
+      I like creating things that are simple but still meaningful. 
+      This class gives me the chance to explore ideas through visuals and interaction, 
+      and to see how small creative choices can make a big difference in how a message is understood.
+    </p>
+
+    <h2>Course Work</h2>
+    <p>
+        Here you’ll find the projects and reflections I worked on throughout the term. 
+      The navigation at the top will help you explore everything.
+    </p>
+</main>
+
+<footer>
+    MEDPL 150 — Spring 2026
+</footer>
+
 </body>
 </html>
