--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </header>
 
 <main>
-    <img src="/medpl150-class-website/headshot.jpg" alt="A picture of me" width="300">
+    <img src="/nailahgordon/headshot.jpg" alt="A picture of me" width="300">
 
     <h2>Creative Statement</h2>
     <p>
